--- a/src/GUI/JobEditorWindow.axaml
+++ b/src/GUI/JobEditorWindow.axaml
@@ -75,20 +75,22 @@
                 BorderThickness="0,1,0,0"
                 BorderBrush="{DynamicResource BorderBrush}"
                 Padding="24,20">
-            <Grid ColumnDefinitions="*,*,Auto" ColumnSpacing="12">
-                <Button Grid.Column="0" 
+            <StackPanel Orientation="Horizontal"
+                        Spacing="12"
+                        HorizontalAlignment="Left">
+                <Button
                         Classes="secondary"
                         Content="{Binding CancelLabel}" 
                         Click="Cancel_Click"
-                        HorizontalAlignment="Stretch"
+                        MinWidth="140"
                         HorizontalContentAlignment="Center" />
-                <Button Grid.Column="1" 
+                <Button
                         Classes="primary"
                         Content="{Binding SaveLabel}" 
                         Click="Save_Click"
-                        HorizontalAlignment="Stretch"
+                        MinWidth="140"
                         HorizontalContentAlignment="Center" />
-            </Grid>
+            </StackPanel>
         </Border>
     </Grid>
 </Window>
