--- a/src/GUI/MainWindow.axaml
+++ b/src/GUI/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:GUI.ViewModels"
+        xmlns:appvm="clr-namespace:EasySave.Application.ViewModels;assembly=Application"
         xmlns:lottie="clr-namespace:Avalonia.Skia.Lottie;assembly=Lottie"
         mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="860"
         x:Class="GUI.MainWindow"
@@ -69,7 +70,7 @@
 
                                         <ItemsControl ItemsSource="{Binding SettingsItems, Mode=OneWay}">
                                             <ItemsControl.ItemTemplate>
-                                                <DataTemplate x:DataType="vm:SettingItemViewModel">
+                                                <DataTemplate x:DataType="appvm:SettingItemViewModel">
                                                     <Border Classes="settings-item-card" Margin="0,0,0,10">
                                                         <StackPanel Spacing="6">
                                                             <TextBlock Text="{Binding Label, Mode=OneWay}" Classes="settings-section-label" Margin="0" />
@@ -88,7 +89,7 @@
                                                                       ItemsSource="{Binding Options, Mode=OneWay}"
                                                                       SelectedItem="{Binding SelectedOption, Mode=TwoWay}">
                                                                 <ComboBox.ItemTemplate>
-                                                                    <DataTemplate x:DataType="vm:SettingOptionViewModel">
+                                                                    <DataTemplate x:DataType="appvm:SettingOptionViewModel">
                                                                         <TextBlock Text="{Binding Label, Mode=OneWay}"
                                                                                    FontWeight="SemiBold" />
                                                                     </DataTemplate>
