--- a/src/GUI/JobEditorWindow.axaml
+++ b/src/GUI/JobEditorWindow.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:GUI.ViewModels"
+        xmlns:vm="clr-namespace:EasySave.Presentation.ViewModels;assembly=Presentation"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600"
         x:Class="GUI.JobEditorWindow"
         x:DataType="vm:MainWindowViewModel"
