--- a/src/GUI/MainWindow.axaml
+++ b/src/GUI/MainWindow.axaml
@@ -2,8 +2,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:GUI.ViewModels"
-        xmlns:appvm="clr-namespace:EasySave.Application.ViewModels;assembly=Application"
+        xmlns:vm="clr-namespace:EasySave.Presentation.ViewModels;assembly=Presentation"
+        xmlns:appvm="clr-namespace:EasySave.Presentation.ViewModels;assembly=Presentation"
         xmlns:lottie="clr-namespace:Avalonia.Skia.Lottie;assembly=Lottie"
         mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="860"
         x:Class="GUI.MainWindow"
